# filepattern_lib

./: Dockerfile  README.md
.github/workflows/: test.yml
src/: CMakeLists.txt  filepattern.cpp  functions.cpp  functions.h
